Header restructure: -Class re-organization -Uniform padding -Consistent button styling -Single-tier dropdown implementation -Multi-tier dropdown (incomplete)

--- a/index.html
+++ b/index.html
@@ -13,13 +13,43 @@
 <body>
     <!-- Page Header -->
     <header>
-        <h1>James' Portfolio</h1>
-        <ul>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Games</a></li>
-            <li><a href="#">Non-Games</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <h1 class="bar-padding">James' Portfolio</h1>
+        <div class="acontainer">
+            <a class="bar-item bar-padding bar-hover" href="#">Resume</a>
+            <div class="dropdown">
+                <a class="dropdown-label bar-padding bar-hover" href="#">Games</a>
+                <div class="dropdown-content">
+                    <div class="sub-dropdown" >
+                        <a class="dropdown-item" id="unity" href="#">Unity</a>
+                        <div class="sub-dropdown-content">
+                            <a class="sub-dropdown-item" href="#">UPS</a>
+                            <a class="sub-dropdown-item" href="#">UPS</a>
+                            <a class="sub-dropdown-item" href="#">UPS</a>
+                            <a class="sub-dropdown-item" href="#">UPS</a>
+                        </div>
+                    </div>
+                    <div class="sub-dropdown" >
+                        <a class="dropdown-item" id="unity" href="#">Unreal</a>
+                        <div class="sub-dropdown-content">
+                            <a class="sub-dropdown-item" href="#">Lake Little</a>
+                            <a class="sub-dropdown-item" href="#">Lake Little</a>
+                            <a class="sub-dropdown-item" href="#">Lake Little</a>
+                            <a class="sub-dropdown-item" href="#">Lake Little</a>
+                        </div>
+                    </div>
+                    <div class="sub-dropdown" >
+                        <a class="dropdown-item" id="unity" href="#">Godot</a>
+                        <div class="sub-dropdown-content">
+                            <a class="sub-dropdown-item" href="#">MSU</a>
+                            <a class="sub-dropdown-item" href="#">MSU</a>
+                            <a class="sub-dropdown-item" href="#">MSU</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="bar-item bar-padding bar-hover" href="#">Non-Games</a>
+            <a class="bar-item bar-padding bar-hover" href="#">Contact</a>
+        </div>
     </header> 
     
     <div class="container">
