Updated colors, styled Games page, improved placeholder graphic -Centered content on the page with border space -Darkened colors -Improved style on Games items -Copied style to sections other than Unity -Properly centered Under Construction page in wip.css (gave it a dedicated file so it doesnt get lost in normal page styling) -Fixed spacing on some elements

--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
                 <a class="dropdown-label bar-padding bar-hover" href="games.html">Games</a>
                 <div class="dropdown-content">
                     <div class="sub-dropdown" >
-                        <a class="dropdown-item" id="unity" href="#">Unity</a>
+                        <a class="dropdown-item" id="unity" href="#unity">Unity</a>
                         <!-- <div class="sub-dropdown-content">
                             <a class="sub-dropdown-item" href="#">UPS</a>
                             <a class="sub-dropdown-item" href="#">UPS</a>
@@ -55,56 +55,70 @@
     <div class="container">
         <div class="content-section">
             <div class="content-subsection">
-                <h1>Unity</h1>
+                <h1 id="unity">Unity</h1>
                 <h2 class="subsection-title">Professional Work</h2>
-                <div class="content-preview">
-                    <img src="resources/images/construction.png" />
-                    <h2>Gamechngrz: Universe</h2>
-                    <h3>NE1:Plays Inc.</h3>
-                    <h4>Lead Programmer</h4>
+                <div class="content-preview content-left">
+                    <div class="center-content">
+                        <img src="resources/images/construction.png" />
+                        <h2 class="project-name">Gamechngrz: Universe</h2>
+                        <h3 class="project-company">NE1:Plays Inc.</h3>
+                        <h4 class="project-role">Lead Programmer</h4>
+                    </div>
                     <p class="content-description">Gamechngrz: Universe is a suite of games intended to test career-related aptitudes in high-school students. 
                         These aptitudes are then combined with a student's reported interests to provide a roadmap to the career that best aligns with these parameters.
-                         It also acts as a hub for career exploration, allowing students to see live reports of a number of career related data-points, including expected education level, salary, and average career length.</p>
+                            It also acts as a hub for career exploration, allowing students to see live reports of a number of career related data-points, including expected education level, salary, and average career length.</p>
                 </div>
-                <div class="content-preview">
-                    <img src="resources/images/construction.png" />
-                    <h2>Unity Tutorial Series</h2>
-                    <h3>Techability Inc.</h3>
-                    <h4>Unity Curriculum Developer</h4>
+                <div class="content-preview content-right">
+                    <div class="center-content">
+                        <img src="resources/images/construction.png" />
+                        <h2 class="project-name">Unity Tutorial Series</h2>
+                        <h3 class="project-company">Techability Inc.</h3>
+                        <h4 class="project-role">Unity Curriculum Developer</h4>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, provident sunt quia harum exercitationem, dolorum consequatur laboriosam est odit voluptatibus ratione corrupti perferendis distinctio ipsum repellat nobis nulla culpa hic!</p>
                 </div>
-                <div class="content-preview">
-                    <img src="resources/images/construction.png" />
-                    <h2>EDGE</h2>
-                    <h3>Starforged Studios</h3>
-                    <h4>Technical Designer</h4>
+                <div class="content-preview  content-left">
+                    <div class="center-content">
+                        <img src="resources/images/construction.png" />
+                        <h2 class="project-name">EDGE</h2>
+                        <h3 class="project-company">Starforged Studios</h3>
+                        <h4 class="project-role">Technical Designer</h4>
+                    </div>
                     <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, provident sunt quia harum exercitationem, dolorum consequatur laboriosam est odit voluptatibus ratione corrupti perferendis distinctio ipsum repellat nobis nulla culpa hic!</p>
                 </div>
             </div>
         </div>
 
         <div class="content-section">
-            <h1>Unreal Engine</h1>
             <div class="content-subsection">
-                <div class="content-preview">
-                    <img src="resources/images/construction.png" />
-                    <h2>Lake Little</h2>
-                    <h3>Tiny Boat</h3>
-                    <h4>Technical Director</h4>
-                    <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, provident sunt quia harum exercitationem, dolorum consequatur laboriosam est odit voluptatibus ratione corrupti perferendis distinctio ipsum repellat nobis nulla culpa hic!</p>
+                <h1 class="no-subtitle" id="unreal">Unreal Engine</h1>
+                <div class="content-preview content-right">
+                    <div class="center-content">
+                        <img src="resources/images/construction.png" />
+                        <h2 class="project-name">Little Lake</h2>
+                        <h3 class="project-company">Tiny Boat</h3>
+                        <h4 class="project-role">Technical Director</h4>
+                    </div>
+                    <p class="content-description">Gamechngrz: Universe is a suite of games intended to test career-related aptitudes in high-school students. 
+                        These aptitudes are then combined with a student's reported interests to provide a roadmap to the career that best aligns with these parameters.
+                            It also acts as a hub for career exploration, allowing students to see live reports of a number of career related data-points, including expected education level, salary, and average career length.</p>
                 </div>
             </div>
         </div>
 
         <div class="content-section">
-            <h1>Godot</h1>
             <div class="content-subsection">
-                <div class="content-preview">
-                    <img src="resources/images/construction.png" />
-                    <h2>Gamechngrz: Universe</h2>
-                    <h3>NE1:Plays Inc.</h3>
-                    <h4>Lead Programmer</h4>
-                    <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, provident sunt quia harum exercitationem, dolorum consequatur laboriosam est odit voluptatibus ratione corrupti perferendis distinctio ipsum repellat nobis nulla culpa hic!</p>
+                <h1 class="no-subtitle" id="godot">Godot</h1>
+                <div class="content-preview content-left">
+                    <div class="center-content">
+                        <img src="resources/images/construction.png" />
+                        <h2 class="project-name">Gamechngrz: Universe</h2>
+                        <h3 class="project-company">NE1:Plays Inc.</h3>
+                        <h4 class="project-role">Lead Programmer</h4>
+                    </div>
+                    <p class="content-description">Gamechngrz: Universe is a suite of games intended to test career-related aptitudes in high-school students. 
+                        These aptitudes are then combined with a student's reported interests to provide a roadmap to the career that best aligns with these parameters.
+                            It also acts as a hub for career exploration, allowing students to see live reports of a number of career related data-points, including expected education level, salary, and average career length.</p>
                 </div>
             </div>
         </div>
