--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/reset.css" />
     <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="resources/css/wip.css" />
     <title>James P Portfolio</title>
 </head>
 <body>
@@ -52,10 +53,12 @@
         </div>
     </header> 
     
-    <div class="container">
-        <img src="resources/images/construction.png" />
-        <h2>Portfolio still under construction...</h2>
-        <h3>Check back again soon!</h3>
+    <div class="under-construction">
+        <div>
+            <img src="resources/images/construction.png" />
+            <h2>Portfolio still under construction...</h2>
+            <h3>Check back again soon!</h3>
+        </div>
     </div>
 </body>
 </html>
