--- a/nongames.html
+++ b/nongames.html
@@ -52,10 +52,12 @@
         </div>
     </header> 
     
-    <div class="container">
-        <img src="resources/images/construction.png" />
-        <h2>Portfolio still under construction...</h2>
-        <h3>Check back again soon!</h3>
+    <div class="under-construction">
+        <div>
+            <img src="resources/images/construction.png" />
+            <h2>Portfolio still under construction...</h2>
+            <h3>Check back again soon!</h3>
+        </div>
     </div>
 </body>
 </html>
