--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/reset.css" />
     <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="stylesheet" href="resources/css/wip.css" />
     <title>James P Portfolio</title>
 </head>
 <body>
