--- a/resume.html
+++ b/resume.html
@@ -20,32 +20,9 @@
             <div class="dropdown">
                 <a class="dropdown-label bar-padding bar-hover" href="games.html">Games</a>
                 <div class="dropdown-content">
-                    <div class="sub-dropdown" >
-                        <a class="dropdown-item" id="unity" href="#">Unity</a>
-                        <!-- <div class="sub-dropdown-content">
-                            <a class="sub-dropdown-item" href="#">UPS</a>
-                            <a class="sub-dropdown-item" href="#">UPS</a>
-                            <a class="sub-dropdown-item" href="#">UPS</a>
-                            <a class="sub-dropdown-item" href="#">UPS</a>
-                        </div> -->
-                    </div>
-                    <div class="sub-dropdown" >
-                        <a class="dropdown-item" id="unity" href="#">Unreal</a>
-                        <!-- <div class="sub-dropdown-content">
-                            <a class="sub-dropdown-item" href="#">Lake Little</a>
-                            <a class="sub-dropdown-item" href="#">Lake Little</a>
-                            <a class="sub-dropdown-item" href="#">Lake Little</a>
-                            <a class="sub-dropdown-item" href="#">Lake Little</a>
-                        </div> -->
-                    </div>
-                    <div class="sub-dropdown" >
-                        <a class="dropdown-item" id="unity" href="#">Godot</a>
-                        <!-- <div class="sub-dropdown-content">
-                            <a class="sub-dropdown-item" href="#">MSU</a>
-                            <a class="sub-dropdown-item" href="#">MSU</a>
-                            <a class="sub-dropdown-item" href="#">MSU</a>
-                        </div> -->
-                    </div>
+                    <a class="dropdown-item"  href="games.html#unity">Unity</a>
+                    <a class="dropdown-item" href="games.html#unreal">Unreal</a>
+                    <a class="dropdown-item"  href="games.html#godot">Godot</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
@@ -53,11 +30,12 @@
         </div>
     </header> 
     
-    <div class="under-construction">
-        <div>
-            <img src="resources/images/construction.png" />
-            <h2>Portfolio still under construction...</h2>
-            <h3>Check back again soon!</h3>
+    
+    <div class="container">
+        <div class ="content-section center-content">
+            <object class="resume-object" data="resources\documents\Resume.pdf" type="application/pdf">
+                <p>Unable to display PDF file. <a href="resources\documents\Resume.pdf">Download</a> instead.</p>
+              </object>
         </div>
     </div>
 </body>
